<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="title_activity_my_disk">MyDiskActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm">Confirm</string>
</resources>